<resources>
    <string name="app_name">LEng</string>
    <string name="statistics_label">Statistics</string>
    <string name="records_label">Records</string>
    <string name="useful_info_label">Useful Info</string>

    <string name="records_count_label">Records count: %d</string>
    <string name="words_count_label">Words count: %d</string>
    <string name="search_info_hint">Type a substring</string>
    <string name="no_results">No results 😓</string>
    <string name="loading">Loading</string>
    <string name="retry">Retry</string>
    <string name="dictionary_label">Dictionary</string>
    <string name="search_word_hint">Type a word</string>
    <string name="word_value">Word: %s</string>
    <string name="word_definitions">Definitions:</string>
    <string name="word_definition">Definition</string>
    <string name="word_translate">Translate</string>
    <string name="word_more_actions">More</string>
    <string name="word_synonyms">Synonyms</string>
    <string name="add_record_title_hint">Title</string>
    <string name="add_record_desc_hint">Description</string>
    <string name="no_internet_connection">Internet connection is not available</string>
    <string name="record_save_button">Save</string>
    <string name="empty_record_message">Records cannot be empty</string>
    <string name="record_is_created">Record is created</string>
    <string name="record_is_updated">Record is updated</string>
    <string name="successfully_saved_record_message">Record saved</string>
    <string name="successfully_added_record_message">Record added</string>
    <string name="successfully_deleted_record_message">Record was deleted</string>
    <string name="failure_remove_records_message">Failed to remove records</string>
    <string name="failure_remove_record_message">Failed to remove the record</string>
    <string name="failure_load_records">"Failed to load records "</string>
    <string name="records_empty">No records</string>
    <string name="confirm_deleting_all_records">Selected records will be deleted and cannot be restored any more. Are you sure to continue?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">San</string>
    <string name="nav_header_subtitle">symbiot.dev@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="homeFragment">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="aboutFragment">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="favoritesFragment">Favorites</string>
    <string name="settings_label">Settings</string>
    <string name="add_fragment_background">Background</string>
    <string name="select_date_label">Select date</string>
    <string name="add_fragment_fonts">Fonts</string>
    <string name="record_prev">Prev</string>
    <string name="record_next">Next</string>
</resources>
