<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/records_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_records"
        android:title="@string/records_label"/>
    <item
        android:id="@+id/dictionary_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_dictionary"
        android:title="@string/dictionary_label"/>
    <item
        android:id="@+id/useful_info_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        android:title="@string/useful_info_label"/>
    <item
        android:id="@+id/statistics_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics_label"/>
</menu>
