<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/records_fragment"
            android:icon="@drawable/ic_search"
            android:title="@string/records_label" />
        <item
            android:id="@+id/dictionary_fragment"
            android:icon="@drawable/ic_search"
            android:title="@string/dictionary_label" />
        <item
            android:id="@+id/useful_info_fragment"
            android:icon="@drawable/ic_search"
            android:title="@string/useful_info_label" />
        <item
            android:id="@+id/statistics_fragment"
            android:icon="@drawable/ic_search"
            android:title="@string/statistics_label" />
        <item
            android:id="@+id/settings_fragment"
            android:icon="@drawable/ic_search"
            android:title="@string/settings_label" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_aboutUs"
                android:title="About Us" />
            <item
                android:id="@+id/nav_privacyPolicy"
                android:title="Privacy Policy" />
        </menu>
    </item>
</menu>
