<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.san.leng.ui.records.addeditrecord.AddEditRecordViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{() -> viewModel.closeBackgroundPicker()}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/add_fragment_bg_color"
            android:padding="8dp"
            app:containerBackground="@{viewModel.backgroundColor}"
            tools:context=".records.add_record.AddRecordFragment">

            <TextView
                android:id="@+id/record_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:recordDate="@{viewModel.creationDate}"
                tools:text="07.07.21" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down"
                android:textSize="8sp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toEndOf="@+id/record_date"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/record_save"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/colorAccent"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.App.SmallComponent"
                android:onClick="@{() -> viewModel.saveRecord()}"
                android:text="@string/record_save_button"
                android:textSize="@dimen/add_edit_records_save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/record_save">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/record_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@null"
                        android:hint="@string/add_record_title_hint"
                        android:text="@={viewModel.title}" />

                    <EditText
                        android:id="@+id/record_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@null"
                        android:hint="@string/add_record_desc_hint"
                        android:inputType="text|textMultiLine"
                        android:text="@={viewModel.description}" />

                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/background_options"
            layout="@layout/fragment_add_options"
            app:viewModel="@{viewModel}" />

        <include
            android:id="@+id/background_layout"
            layout="@layout/fragment_add_options_bg_layout"
            app:viewModel="@{viewModel}" />

    </FrameLayout>
</layout>
